- Updated to new Primefaces version - minor layout bugs corrected - arrow indicating current language

--- a/trunk/FinantialFaces/web/resources/css/global.css
+++ b/trunk/FinantialFaces/web/resources/css/global.css
@@ -86,7 +86,7 @@
 }
 
 .themeMenu{
-    overflow: auto;
+    overflow: hidden;
     width:125px;
 }
 .yearsMenu{
@@ -119,4 +119,22 @@
 
 .highlight {
     background-color: #fcc;
+}
+
+.modalType {
+    
+    margin-left: 2px;
+    height: 21px;
+    width: 140px;
+    *width: 183px;
+    margin-left:0px\9;
+
+}
+
+@-moz-document url-prefix() {
+    .modalType{
+    margin-left:0;
+    height: 21px;
+    width: 144px;
+}
 }
